--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
-    "name": "QiQiuYun/MessageWorker",
-    "description": "QiQiuYun MessageWorker.",
+    "name": "Footstones/Plumber",
+    "type": "library",
+    "description": "A PHP Message Queue Worker.",
+    "keywords": ["plumber", "beanstalk", "message queue", "swoole"],
+    "homepage": "https://github.com/Footstones/Plumber",
+    "license": "MIT",
     "autoload": {
         "psr-4": { 
             "Footstones\\Plumber\\": "src/"
@@ -13,6 +17,10 @@
         }
     ],
     "require": {
+        "php": ">=5.4.1",
+        "ext-swoole": ">=1.7.17",
         "davidpersson/beanstalk" : "2.0.0"
-    }
+    },
+
+    "bin": ["bin/plumber"]
 }
