--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "license": "MIT",
     "autoload": {
         "psr-4": { 
-            "Footstones\\Plumber\\": "src/"
+            "Footstones\\Plumber\\": "src/",
+            "Footstones\\Plumber\\Tests": "tests/",
+            "Footstones\\Plumber\\Example": "example/"
         }
     },
     "authors": [
