--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "require": {
         "php": ">=5.4.1",
         "ext-swoole": ">=1.7.17",
-        "davidpersson/beanstalk" : "2.0.0"
+        "davidpersson/beanstalk" : "2.0.0",
+        "psr/log": "1.0.0"
     },
 
     "bin": ["bin/plumber"]
