--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,13 @@
         "php": ">=5.4.1",
         "ext-swoole": ">=1.7.17",
         "davidpersson/beanstalk" : "2.0.0",
-        "psr/log": "1.0.0"
+        "psr/log": "^1.0.0 || dev-master"
     },
-
-    "bin": ["bin/plumber"]
+    "bin": ["bin/plumber"],
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
+    }
 }
